<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="327dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/which_of_the_following_is_are_are_the_subclasses_in_android"
        android:textAlignment="center"
        android:textColor="#5716E6"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.763" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="353dp"
        android:layout_height="229dp"
        android:layout_marginTop="264dp"
        app:layout_constraintBottom_toTopOf="@+id/startQuiz2btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008">

        <RadioButton
            android:id="@+id/reponse1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_of_above" />

        <RadioButton
            android:id="@+id/reponse2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_activity" />

        <RadioButton
            android:id="@+id/reponse3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preference_activity" />

        <RadioButton
            android:id="@+id/reponse4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launcher_activity" />
    </RadioGroup>

    <Button
        android:id="@+id/startQuiz2btn"
        android:layout_width="182dp"
        android:layout_height="53dp"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />

</androidx.constraintlayout.widget.ConstraintLayout>