<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="368dp"
        android:layout_height="99dp"
        android:layout_marginTop="4dp"
        android:text="@string/welcome_to_android_quiz"
        android:textAlignment="center"
        android:textColor="#5716E6"
        android:textIsSelectable="false"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startQuizBtn"
        android:layout_width="257dp"
        android:layout_height="79dp"
        android:background="@color/white"
        android:text="@string/start_quiz"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="313dp"
        android:layout_height="367dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/startQuizBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.244"
        app:srcCompat="@drawable/capture_d_cran_2021_10_28_012101"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>